# src/routes/healthRoutes.js
@@ -1,0 +1,9 @@
+const express = require("express");
+
+const router = express.Router();
+
+router.get("/", (req, res) => {
+	res.status(200).json({ status: "ok" });
+});
+
+module.exports = router;
